fetch by owner and pagination added